--- a/.github/workflows/scrape_rainfall.yml
+++ b/.github/workflows/scrape_rainfall.yml
@@ -21,6 +21,6 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt
+          pip install -r req/requirements.txt
       - name: Run the script
         run: python scrape_rainfall.py
