--- a/.github/workflows/wl_scrape.yml
+++ b/.github/workflows/wl_scrape.yml
@@ -20,6 +20,6 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt
+          pip install -r req/requirements.txt
       - name: Run the script
         run: python wl_scraper.py
